<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <TextView
        android:id="@+id/text_view_time_taken"
        style="@style/textViewStyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_taken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_search_planet" />

    <TextView
        android:id="@+id/text_view_search_planet"
        style="@style/textViewStyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_planet_you_want_to_search_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_planets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_time_taken"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/item_planet" />

    <TextView
        android:id="@+id/text_view_footer"
        style="@style/textViewFooter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/footer"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_find_falcone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/find_falcone"
        app:layout_constraintBottom_toTopOf="@+id/text_view_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/textViewActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/text_view_search_planet"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_reset"
        style="@style/textViewActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/text_view_search_planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  <TextView
          android:id="@+id/textView4"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/destination_1"
          android:textAlignment="center"
          app:layout_constraintEnd_toStartOf="@+id/textView5"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView3" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/destination_2"
          android:textAlignment="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@+id/textView4"
          app:layout_constraintTop_toBottomOf="@+id/textView3" />

      <Spinner
          android:id="@+id/spinner"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/spinner_background"
          app:layout_constraintEnd_toEndOf="@+id/textView4"
          app:layout_constraintStart_toStartOf="@+id/textView4"
          app:layout_constraintTop_toBottomOf="@+id/textView4" />

      <Spinner
          android:id="@+id/spinner2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/spinner_background"
          app:layout_constraintEnd_toEndOf="@+id/textView5"
          app:layout_constraintStart_toEndOf="@+id/textView4"
          app:layout_constraintTop_toBottomOf="@+id/textView5" />-->

</androidx.constraintlayout.widget.ConstraintLayout>